--- a/Actividades/Actividad5.html
+++ b/Actividades/Actividad5.html
@@ -25,8 +25,8 @@
                         <li><a href="../Curriculum_Vitae/Integrante1.html">Galindo Oviedo, Joseph Alfredo</a></li>
                         <li><a href="../Curriculum_Vitae/Integrante2.html">Sánchez Polanco, Bruno Daniel</a></li>
                         <li><a href="../Curriculum_Vitae/Integrante3.html">Mendoza Aguilar, Elard Alonso</a></li>
-                        <li><a href="../Curriculum_Vitae/Integrante4.html">Roger Cáceres</a></li>
-                        <li><a href="../Curriculum_Vitae/Integrante5.html">Jean Piero Andre Bernabe Huanca</a></li>
+                        <li><a href="../Curriculum_Vitae/Integrante4.html">Caceres Riveros, Roger Percy</a></li>
+                        <li><a href="../Curriculum_Vitae/Integrante5.html">Bernabe Huanca, Jean Piero Andre</a></li>
                     </ul>
                  </li>
                 <li><a href="../Proyecto_Innovacion.html">Proyecto de Innovación</a>
