--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                     <li><a href="Curriculum_Vitae/Integrante1.html">Galindo Oviedo, Joseph Alfredo</a></li>
                     <li><a href="Curriculum_Vitae/Integrante2.html">Sánchez Polanco, Bruno Daniel</a></li>
                     <li><a href="Curriculum_Vitae/Integrante3.html">Mendoza Aguilar, Elard Alonso</a></li>
-                    <li><a href="Curriculum_Vitae/Integrante4.html">Roger Cáceres</a></li>
-                    <li><a href="Curriculum_Vitae/Integrante5.html">Jean Piero Andre Bernabe Huanca</a></li>
+                    <li><a href="Curriculum_Vitae/Integrante4.html">Caceres Riveros, Roger Percy</a></li>
+                    <li><a href="Curriculum_Vitae/Integrante5.html">Bernabe Huanca, Jean Piero Andre</a></li>
                 </ul>
              </li>
             <li><a href="Proyecto_Innovacion.html">Proyecto de Innovación</a>
@@ -96,7 +96,7 @@
                 </div>
                 <div class="team__item__description">
                   <p class="team__item__description__name">Sánchez Polanco, Bruno Daniel</p>
-                  <p class="team__item__description__info">Describir que les gusta hacer. y en que actividades son realmente hábiles.</p>
+                  <p class="team__item__description__info">Me gustan los videojuegos, hay veces en los que puedo ser totalmente bueno ahí, así como en las matemáticas.</p>
                   <p class="team__item__description__cal">Rol principal: <strong>Creativo</strong></p>
                   <p class="team__item__description__cal">Rol Secundario: <strong>Coordinador</strong></p>
                   <p class="team__item__description__cal">Numero de Celular: <strong>None</strong></p>
@@ -121,7 +121,7 @@
                         <img src="img/Roger Caceres.jpeg" alt="">
                     </div>
                     <div class="team__item__description">
-                      <p class="team__item__description__name">Roger Cáceres</p>
+                      <p class="team__item__description__name">Caceres Riveros, Roger Percy</p>
                       <p class="team__item__description__info">Describir que les gusta hacer. y en que actividades son realmente hábiles.</p>
                       <p class="team__item__description__cal">Rol principal: <strong>Comunicador</strong></p>
                       <p class="team__item__description__cal">Rol Secundario: <strong>Constructor</strong></p>
@@ -134,7 +134,7 @@
                             <img src="img/Piero.png" alt="">
                         </div>
                         <div class="team__item__description">
-                          <p class="team__item__description__name">Jean Piero Andre Bernabe Huanca</p>
+                          <p class="team__item__description__name">Bernabe Huanca, Jean Piero Andre</p>
                           <p class="team__item__description__info">Describir que les gusta hacer. y en que actividades son realmente hábiles.</p>
                           <p class="team__item__description__cal">Rol principal: <strong>Comunicador</strong></p>
                           <p class="team__item__description__cal">Rol Secundario: <strong>Explorador</strong></p>
