--- a/Actividades/Actividad1.html
+++ b/Actividades/Actividad1.html
@@ -60,25 +60,25 @@
                 </div>
                 <div class="think__details__info">
                     <p class="think__details__info__title">Desarrollo de la actividad</p>
-                    <p class="think__details__extra__description">Desarrollar cada criterio de evaluación, si existen imágenes o videos colocarlos en el lado izquierdo de la página referenciando los mismos.</p>
+                    <p class="think__details__extra__description">Nos enfocamos en nuestras capacidades para emprender.</p>
 
                 </div>
 
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">Criterio de evaluación 1</p>
-                    <p class="think__details__extra__description">Entienden que emprender es cuestión de problemas y capacidades según los casos de estudio.</p>
+                    <p class="think__details__extra__description">Se pueden ver casos de turistas perdidos o en otro caso de que haya turistas que no conozcan bien por donde ir ya que no se conocen las calles.</p>
                 </div>
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">Criterio de evaluación 2</p>
-                    <p class="think__details__extra__description">Identifican sus capacidades para emprender.</p>
+                    <p class="think__details__extra__description">La mayoría del grupo tenemos una capacidad en común, que nos gusta desarrollarnos en habilidades dentro de los videojuegos, donde se pueden aprender ciertas cosas como trabajo en equipo.</p>
                 </div>
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">Criterio de evaluación 3</p>
-                    <p class="think__details__extra__description">Planifican el Proceso.</p>
+                    <p class="think__details__extra__description">En todo proceso y éxito en la vida hay procesos para llegar a la etapa final, en este caso nos encontramos con 6 diferentes procesos.</p>
                 </div>
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">Criterio de evaluación 4</p>
-                    <p class="think__details__extra__description">Entienden que emprender es una actividad en equipo.</p>
+                    <p class="think__details__extra__description">Será una difícil tarea, pero unidos es posible realizarla y para ello necesitamos que cada uno de nosotros tome algún rango dentro del grupo para que pueda distribuirse mejor en su papel.</p>
                 </div>
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">Criterio de evaluación 5</p>
