--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 </div>
                 <div class="team__item__description">
                     <p class="team__item__description__name">Galindo Oviedo, Joseph Alfredo</p>
-                    <p class="team__item__description__info">Describir que les gusta hacer. y en que actividades son realmente hábiles.</p>
+                    <p class="team__item__description__info">Me gusta mucho jugar fútbol y seguir entrenando, no solo en el deporte, sino en mis estudios.</p>
                     <p class="team__item__description__cal">Rol principal: <strong>Coordinador</strong></p>
                     <p class="team__item__description__cal">Rol Secundario: <strong>Explorador</strong></p>
                     <p class="team__item__description__cal">Numero de Celular: <strong>982 060 469</strong></p>
@@ -109,7 +109,7 @@
                 </div>
                 <div class="team__item__description">
                   <p class="team__item__description__name">Mendoza Aguilar, Elard Alonso</p>
-                  <p class="team__item__description__info">Describir que les gusta hacer. y en que actividades son realmente hábiles.</p>
+                  <p class="team__item__description__info">Me gusta aprender de los demás creo que en cada persona hay algo que uno puede aprender. También me gusta trabajar en equipo y siempre realizar un buen trabajo.</p>
                   <p class="team__item__description__cal">Rol principal: <strong>Explorador</strong></p>
                   <p class="team__item__description__cal">Rol Secundario: <strong>Constructor</strong></p>
                   <p class="team__item__description__cal">Numero de Celular: <strong>936 668 749</strong></p>
@@ -122,7 +122,7 @@
                     </div>
                     <div class="team__item__description">
                       <p class="team__item__description__name">Cáceres Riveros, Roger Percy</p>
-                      <p class="team__item__description__info">Describir que les gusta hacer. y en que actividades son realmente hábiles.</p>
+                      <p class="team__item__description__info">Soy una persona con valores morales y éticos tales como: honestidad, responsabilidad, honor y proactividad. Tengo la capacidad de aprender con rapidez y trabajar en equipo.</p>
                       <p class="team__item__description__cal">Rol principal: <strong>Comunicador</strong></p>
                       <p class="team__item__description__cal">Rol Secundario: <strong>Constructor</strong></p>
                       <p class="team__item__description__cal">Numero de Celular: <strong>944 037 888</strong></p>
@@ -135,7 +135,7 @@
                         </div>
                         <div class="team__item__description">
                           <p class="team__item__description__name">Bernabe Huanca, Jean Piero Andre</p>
-                          <p class="team__item__description__info">Describir que les gusta hacer. y en que actividades son realmente hábiles.</p>
+                          <p class="team__item__description__info">Soy una persona a la cual el fútbol es su pasión, también me gusta ayudar a mis compañeros en lo que pueda y necesiten.</p>
                           <p class="team__item__description__cal">Rol principal: <strong>Comunicador</strong></p>
                           <p class="team__item__description__cal">Rol Secundario: <strong>Explorador</strong></p>
                           <p class="team__item__description__cal">Numero de Celular: <strong>None</strong></p>
