--- a/Curriculum_Vitae/Integrante1.html
+++ b/Curriculum_Vitae/Integrante1.html
@@ -58,7 +58,7 @@
 
         <div class="think">
             <div class="think__img">
-                <iframe src="https://drive.google.com/file/d/0B4pagrOn0qD9SDE0WE1RUTdGRmUtcndnZXhGWDJCdWxTd2dB/preview" height="560" width="600"></iframe>
+                <embed src="c-Joseph.pdf" type="application/pdf" width="800" height="600"></embed>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
