--- a/Curriculum_Vitae/Integrante1.html
+++ b/Curriculum_Vitae/Integrante1.html
@@ -58,7 +58,7 @@
 
         <div class="think">
             <div class="think__img">
-                <embed src="c-Joseph.pdf" type="application/pdf" width="800" height="600"></embed>
+                <embed src="c-Joseph.pdf" type="application/pdf" height="560" width="600"></embed>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
