--- a/Curriculum_Vitae/Integrante3.html
+++ b/Curriculum_Vitae/Integrante3.html
@@ -58,7 +58,7 @@
 
         <div class="think">
             <div class="think__img">
-                <iframe src="https://drive.google.com/file/d/0B4pagrOn0qD9OUtnell5N2pvVjZWdXlReEcwNmc2a2UxQVNJ/preview" height="560" width="600"></iframe>
+                <embed src="c-Alonso.pdf" type="application/pdf" height="560" width="600"></embed>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
