--- a/Curriculum_Vitae/Integrante4.html
+++ b/Curriculum_Vitae/Integrante4.html
@@ -58,7 +58,7 @@
 
         <div class="think">
             <div class="think__img">
-                <iframe src="https://drive.google.com/file/d/0B4pagrOn0qD9SmtjX0ZVYTNiTlQ3dnJBUDNES25feG5DcmtF/preview" height="560" width="600"></iframe>
+                <embed src="c-Roger.pdf" type="application/pdf" height="560" width="600"></embed>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
