--- a/Actividades/Actividad2.html
+++ b/Actividades/Actividad2.html
@@ -57,7 +57,7 @@
 
         <div class="think">
             <div class="think__img">
-              <iframe src="https://drive.google.com/file/d/0B4pagrOn0qD9LThMVDJnZHdBRHpmbTZ1Uzk4T3lsdTE3aWZz/preview"height="560"width="560"></iframe>
+              <embed src="A-2.pdf" type="application/pdf" height="560" width="600"></embed>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
