--- a/Actividades/Actividad1.html
+++ b/Actividades/Actividad1.html
@@ -58,7 +58,7 @@
 
         <div class="think">
             <div class="think__img">
-                <iframe src="https://drive.google.com/file/d/0B4pagrOn0qD9bkFmM0t0X0JoTW5WMVM2Rm5Cd0VpOHNjZlI4/preview" height="560" width="560"></iframe>
+                <embed src="A-1.pdf" type="application/pdf" height="560" width="600"></embed>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
@@ -91,7 +91,7 @@
                     <p class="think__details__extra__description">En la creación de equipos se asignan roles principales y secundarios.</p>
                     <br>
                     Adjuntar el informe completo de la actividad.</p>
-                    <a href="https://drive.google.com/file/d/0B4pagrOn0qD9bkFmM0t0X0JoTW5WMVM2Rm5Cd0VpOHNjZlI4/view?usp=sharing" target="_blank">Descargue aquí el informe.</a>
+                    <a href="https://drive.google.com/file/d/0B4pagrOn0qD9Um8tWGMtM29nZUhqOW1VUGtmNTUzVEE4c1JF/view?usp=sharing" target="_blank">Descargue aquí el informe.</a>
                 </div>
             </div>
         </div>
