--- a/Actividades/Actividad6.html
+++ b/Actividades/Actividad6.html
@@ -58,7 +58,7 @@
 
         <div class="think">
             <div class="think__img">
-                <iframe src="https://docs.google.com/document/d/e/2PACX-1vSzmMyX48l0IhalZr-5avzFabL28s8URUaoASr9Ic0NhPZPbwe2q7rj5ffvh_NJ-k0qRmp3cGTbEN5m/pub?embedded=true"height="560" width="560"></iframe>
+                <embed src="A-6.pdf" type="application/pdf" height="560" width="600"></embed>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
@@ -87,7 +87,7 @@
                     <p class="think__details__extra__description">Saber valorar de forma objetiva otras propuesta de valor.</p>
                     <br>
                     Adjuntar el informe completo de la actividad.</p>
-                    <a href="https://drive.google.com/file/d/1Ayi3qi3_-QT9vj9bge99LrxLOIVReWnm/view?usp=sharing" target="_blank">Descargue aquí el informe.</a>
+                    <a href="https://drive.google.com/file/d/0B4pagrOn0qD9SThfN2VsZ2VjSFBndXh2NXhwR2xBMmNpWVZv/view?usp=sharing" target="_blank">Descargue aquí el informe.</a>
                 </div>
               </div>
         </div>
